Modified how the website looks, preparing for implementation of ml model.

--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
   <!-- <div class="header"> -->
  
   <div class="topnav">
-    <a class="active" href="index.html">Home</a>
-    <a href="BreedInfo.html">Breed Information</a> 
-    <a href="about.html">About Us</a>
+    <a class="home" href="index.html">Home</a>
+    <a class="breedInfo" href="BreedInfo.html">Breed Information</a> 
+    <a class="about" href="about.html">About Us</a>
     <br>
     <br>
   </div>
