--- a/about.html
+++ b/about.html
@@ -27,7 +27,9 @@
       <h2>Emily Manchego-Stillwell</h2>
       <img src="static/Images/emily.png" alt="Avatar" class="image" style="width:99%">
       <div class="middle">
-        <div class="text">Emily is a Colorado native who loves her family, nature, and pets.</div>
+        <div class="text">Emily is a Colorado native who loves her family, nature, and pets.<br>
+          Emily was identified by the Model as a Miniature Poodle with 48.40% confidence.
+        </div>
       </div>
       </div>
       <div class = "col-md-6">
@@ -36,7 +38,8 @@
         <div class="middle">
           <div class="text">Ryan is a data analyst based in Denver. 
             When he's not behind a computer he's probably watching a movie,
-            cooking, or sitting in between as many pets as possible.</div>
+            cooking, or sitting in between as many pets as possible. <br>
+            Ryan was identified by the Model as a Collie with 41.56% confidence</div>
         </div>
         </div>
         <div class = "col-md-6">
@@ -57,9 +60,9 @@
           </div>
           <div class = "col-md-6">
             <h2>Marah Quinonez-Dominguez</h2>
-            <img src="static/Images/Marah.jpg" alt="Avatar" class="image" style="width:100%">
+            <img src="static/Images/Marah.jpg" alt="Avatar" class="image" style="width:95%">
             <div class="middle">
-              <div class="text"> Marah's blurb</div>
+              <div class="text"> Marah is a first generation Denver native aspiring to become a Data Analyst.</div>
               </div>
             </div>
     </div> 
