Changed BreedInfo.html to make breed facts table fit better on the page. Finished adding about information on about.html.

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
       <h2>Emily Manchego-Stillwell</h2>
       <img src="static/Images/emily.png" alt="Avatar" class="image" style="width:99%">
       <div class="middle">
-        <div class="text">Emily is a Colorado native who loves her family, nature, and pets.<br>
+        <div class="text">Emily is a Colorado native who loves her family, nature, and pets.<br><br>
           Emily was identified by the Model as a Miniature Poodle with 48.40% confidence.
         </div>
       </div>
@@ -38,7 +38,7 @@
         <div class="middle">
           <div class="text">Ryan is a data analyst based in Denver. 
             When he's not behind a computer he's probably watching a movie,
-            cooking, or sitting in between as many pets as possible. <br>
+            cooking, or sitting in between as many pets as possible. <br><br>
             Ryan was identified by the Model as a Collie with 41.56% confidence</div>
         </div>
         </div>
@@ -47,7 +47,8 @@
           <img src="static/Images/Abi.jpg" alt="Avatar" class="image" style="width:99%">
           <div class="middle">
             <div class="text">Abi is a data analyst, who loves painting, 
-              hanging out with her pets, and finding new things to learn about. </div>
+              hanging out with her pets, and finding new things to learn about.<br><br>
+              Abi was identified as a Saluki with 42.23% confidence.</div>
           </div>
           </div>
           <div class = "col-md-6">
@@ -55,14 +56,17 @@
             <img src="static/Images/Puneet.jpg" alt="Avatar" class="image" style="width:99%">
             <div class="middle">
               <div class="text">Puneet is a mother of three, 
-                aspiring Data Analyst and becoming more of a DOG admirer after this project </div>
+                aspiring Data Analyst and becoming more of a DOG admirer after this project <br><br> 
+                Puneet was identfied as a Standard Poodle with 39.87% confidence</div>
           </div>
           </div>
           <div class = "col-md-6">
             <h2>Marah Quinonez-Dominguez</h2>
             <img src="static/Images/Marah.jpg" alt="Avatar" class="image" style="width:95%">
             <div class="middle">
-              <div class="text"> Marah is a first generation Denver native aspiring to become a Data Analyst.</div>
+              <div class="text"> Marah is a first generation Denver native aspiring to become a Data Analyst.<br><br>
+                Marah was predicted to be a Chihuahua with 84.21% confidence.
+              </div>
               </div>
             </div>
     </div> 
